// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be disabled 1`] = `
<FacetBox
  className="search-navigator-facet-box-forbidden"
  property="foo"
>
  <FacetHeader
    disabled={true}
    disabledHelper="Disabled helper description"
    fetching={false}
    name="facet header"
    onClear={[Function]}
    open={false}
    values={[]}
  />
</FacetBox>
`;

exports[`should display all selected items 1`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={
      [
        "a",
        "b",
        "c",
      ]
    }
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value=""
  />
  <FacetItemsList>
    <FacetItem
      active={true}
      halfWidth={false}
      key="a"
      loading={false}
      name="a"
      onClick={[Function]}
      stat="10"
      tooltip="a"
      value="a"
    />
    <FacetItem
      active={true}
      halfWidth={false}
      key="b"
      loading={false}
      name="b"
      onClick={[Function]}
      stat="5"
      tooltip="b"
      value="b"
    />
  </FacetItemsList>
  <div
    className="note spacer-bottom text-center"
  >
    ⋯
  </div>
  <FacetItemsList>
    <FacetItem
      active={true}
      halfWidth={false}
      key="c"
      loading={false}
      name="c"
      onClick={[Function]}
      stat="3"
      tooltip="c"
      value="c"
    />
  </FacetItemsList>
  <ListStyleFacetFooter
    count={3}
    showMore={[Function]}
    total={3}
  />
  <MultipleSelectionHint
    options={3}
    values={3}
  />
</FacetBox>
`;

exports[`should render 1`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value=""
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="a"
      loading={false}
      name="a"
      onClick={[Function]}
      stat="10"
      tooltip="a"
      value="a"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="b"
      loading={false}
      name="b"
      onClick={[Function]}
      stat="8"
      tooltip="b"
      value="b"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="c"
      loading={false}
      name="c"
      onClick={[Function]}
      stat="1"
      tooltip="c"
      value="c"
    />
  </FacetItemsList>
  <ListStyleFacetFooter
    count={3}
    showMore={[Function]}
    total={3}
  />
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;

exports[`should search 1`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value="query"
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="d"
      loading={false}
      name="d"
      onClick={[Function]}
      stat="7"
      tooltip="d"
      value="d"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="e"
      loading={false}
      name="e"
      onClick={[Function]}
      stat="3"
      tooltip="e"
      value="e"
    />
  </FacetItemsList>
  <ListFooter
    className="spacer-bottom"
    count={2}
    loadMore={[Function]}
    ready={true}
    total={3}
  />
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;

exports[`should search 2`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value="query"
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="d"
      loading={false}
      name="d"
      onClick={[Function]}
      stat="7"
      tooltip="d"
      value="d"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="e"
      loading={false}
      name="e"
      onClick={[Function]}
      stat="3"
      tooltip="e"
      value="e"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="f"
      loading={false}
      name="f"
      onClick={[Function]}
      stat="5"
      tooltip="f"
      value="f"
    />
  </FacetItemsList>
  <ListFooter
    className="spacer-bottom"
    count={3}
    loadMore={[Function]}
    ready={true}
    total={3}
  />
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;

exports[`should search 3`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value=""
  />
  <FacetItemsList>
    <FacetItem
      active={false}
      halfWidth={false}
      key="a"
      loading={false}
      name="a"
      onClick={[Function]}
      stat="10"
      tooltip="a"
      value="a"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="b"
      loading={false}
      name="b"
      onClick={[Function]}
      stat="8"
      tooltip="b"
      value="b"
    />
    <FacetItem
      active={false}
      halfWidth={false}
      key="c"
      loading={false}
      name="c"
      onClick={[Function]}
      stat="1"
      tooltip="c"
      value="c"
    />
  </FacetItemsList>
  <ListStyleFacetFooter
    count={3}
    showMore={[Function]}
    total={3}
  />
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;

exports[`should search 4`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value="blabla"
  />
  <div
    className="note spacer-bottom"
  >
    no_results
  </div>
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;

exports[`should search 5`] = `
<FacetBox
  property="foo"
>
  <FacetHeader
    fetching={false}
    name="facet header"
    onClear={[Function]}
    onClick={[Function]}
    open={true}
    values={[]}
  />
  <SearchBox
    autoFocus={false}
    className="little-spacer-top spacer-bottom"
    loading={false}
    minLength={2}
    onChange={[Function]}
    placeholder="search for foo..."
    value="blabla"
  />
  <div
    className="note spacer-bottom"
  >
    no_results
  </div>
  <MultipleSelectionHint
    options={3}
    values={0}
  />
</FacetBox>
`;
